isolate animations to prevent jump on initial draw

--- a/angular-range-slider.scss
+++ b/angular-range-slider.scss
@@ -6,7 +6,9 @@
     $track-radius:    10px, 
     $progress-colour: rgb(51, 136, 204), 
     $handle-colour:   rgb(246, 246, 246), 
-    $handle-size:     28px
+    $handle-size:     28px,
+    $animation-time:  0.15s,
+    $animation-type:  ease-in-out
 ) {
     $handle-margin: $handle-size / 2;
 
@@ -23,19 +25,16 @@
         &> div {
             position: relative;
 
-            &.animate > * {
-                @include single-transition(all, 0.15s, ease-in-out);
-            }
-
             .track, .progress {
                 @include border-radius($track-radius);
                 position: absolute;
-                width: 100%;
-                height: 100%;
                 left: 0px;
             }
 
             .track {
+                width: 100%;
+                height: 100%;
+
                 background-color: $track-colour;
                 cursor: pointer;
             }
@@ -43,6 +42,9 @@
             .progress {
                 background-color: $progress-colour;
                 cursor: pointer;
+
+                width: 0;
+                height: 100%;
             }
 
             .handle {
@@ -58,6 +60,16 @@
                 background-color: $handle-colour;
                 @include border-radius($handle-margin);
                 @include box-shadow(rgba(0,0,0,.5) 0 1px 5px);
+            }
+
+            &.animate {
+                .progress {
+                    @include single-transition(width, $animation-time, $animation-type);
+                }
+
+                .handle {
+                    @include single-transition(left, $animation-time, $animation-type);
+                }
             }
 
             &.dragging {
@@ -93,6 +105,19 @@
 
                 .progress {
                     bottom: 0px;
+
+                    width: 100%;
+                    height: 0;
+                }
+
+                &.animate {
+                    &> div.progress {
+                        @include single-transition(height, $animation-time, $animation-type);
+                    }
+
+                    &> div.handle {
+                        @include single-transition(bottom, $animation-time, $animation-type);
+                    }
                 }
             }
         }
